--- a/demo/src/components/Demo/Demo.css
+++ b/demo/src/components/Demo/Demo.css
@@ -63,6 +63,11 @@ header {
   text-align: left;
   flex-basis: calc(50% - var(--spacing-sm));
 }
+.header-side {
+  flex-basis: calc(50% - var(--spacing-sm));
+  overflow: hidden;
+  max-height: 141px;
+}
 
 .header-content h1 {
   margin-bottom: 0.2em;
@@ -300,22 +305,6 @@ footer {
   text-align: center;
 }
 
-/* Ad Container */
-.ad-container {
-  margin: 0;
-  flex-shrink: 0;
-  flex-basis: calc(50% - var(--spacing-sm));
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.ad-container-horizontal {
-  max-width: 100%;
-  overflow: hidden;
-}
-
 /* Responsive Design */
 @media (max-width: 768px) {
   header {
@@ -329,12 +318,6 @@ footer {
     flex-basis: auto;
     width: 100%;
   }
-
-  header .ad-container {
-    margin: 0;
-    width: 100%;
-    flex-basis: auto;
-  }
 }
 
 /* UI Buttons Row */
@@ -343,4 +326,9 @@ footer {
   align-items: center;
   justify-content: space-between;
   margin-bottom: var(--spacing-lg);
+}
+
+.ad-container {
+  /* width: 100%; */
+  height: 90px;
 }
